--- a/uci/Cargo.toml
+++ b/uci/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+regex = "1"
 engine = { path = "../engine" }
+movegen = { path = "../movegen" }
 
 [dev-dependencies]
 search = { path = "../search" }
