--- a/search/Cargo.toml
+++ b/search/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossbeam-channel = "0.5"
 eval = { path = "../eval" }
 movegen = { path = "../movegen" }
 
