--- a/movegen/Cargo.toml
+++ b/movegen/Cargo.toml
@@ -8,3 +8,11 @@ edition = "2018"
 
 [dependencies]
 bitflags = "1.0"
+
+[dev-dependencies]
+criterion = "0.3"
+perft = { path = "../perft" }
+
+[[bench]]
+name = "bench_movegen"
+harness = false
