--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,23 +2,21 @@ name: Coverage
 
 on: [push]
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
-  build:
-
+  coverage:
     runs-on: ubuntu-latest
-
+    env:
+      CARGO_TERM_COLOR: always
     steps:
-    - uses: actions/checkout@v3
-    - name: Install dependencies
-      run: |
-        cargo install cargo-tarpaulin
-    - name: Build
-      run: cargo build --verbose
-    - name: Generate code coverage
-      run: |
-        cargo tarpaulin --verbose --timeout 120 --out Xml
-    - name: Upload to codecov.io
-      uses: codecov/codecov-action@v3
+      - uses: actions/checkout@v3
+      - name: Install Rust
+        run: rustup update stable
+      - name: Install cargo-llvm-cov
+        uses: taiki-e/install-action@cargo-llvm-cov
+      - name: Generate code coverage
+        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: lcov.info
+          fail_ci_if_error: true
