--- a/movegen/Cargo.toml
+++ b/movegen/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 
 [dependencies]
 bitflags = "2.8.0"
+rand = "0.9"
+rand_chacha = "0.9.0"
 smallvec = "1.13.2"
+static_init = "1.0.4"
 thiserror = "2.0.11"
 
 [dev-dependencies]
 criterion = "0.5.1"
-rand = "0.9"
 
 [[bench]]
 name = "bench_movegen"
