--- a/tuner/Cargo.toml
+++ b/tuner/Cargo.toml
@@ -12,5 +12,5 @@ nalgebra-sparse = "0.10.0"
 rand = "0.9.0"
 serde = "1.0.217"
 serde_json = "1.0.138"
-eval = { path = "../eval" }
+eval = { path = "../eval", features = ["trace"] }
 movegen = { path = "../movegen" }
